# thrift_parser

./: Cargo.toml  README.md
src/: compile.rs  generate.rs  lib.rs  parse.rs  visit.rs
tests/fixtures/: ast  gen.ts
tests/fixtures/compiler/: a.thrift  b.thrift  service.thrift
